# etz-chaim-ai

./: .claudeignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  LICENSE_THIRD_PARTY.md  MISSION.md  Makefile  NOTICE  README.md  SECURITY.md  SPRINT0_MANIFEST.md  SPRINT_0.5_MANIFEST.md  adam_kadmon.py  adam_kadmon.yaml  bootstrap_selfmap.py  config.yaml  conftest.py  daat_bridge.py  daemon.py  daemon_bridge.py  enrich_hebrew.py  etz_provider.py  hishtalshelut.py  hitbonenut.py  hitbonenut_corpus.yaml  igulim.py  init_db.py  madregot_neshamah.py  main.py  mitzvot.py  (+13 more)
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  lint-strict-paths.txt
BENCHMARK/: README.md  notes_benchmark_v2_oauth.md  report.md  responses.jsonl
autojudge/: __init__.py  cli.py  core.py  db.py  evaluator.py  lamed_bridge.py  loop.py  models.py  schema.sql
benchmarks/: __init__.py  analyze.py  arms.py  cache.py  checkpoint.py  claude_cli.py  cli.py  etz_invoke.py  heuristic_judge.py  judge.py  package.py  runner.py  stats.py  token_tracker.py
bridge/: __init__.py  sifrei_reader.py
causalengine/: __init__.py  cli.py  confounder_detector.py  core.py  dag_builder.py  db.py  evidence_elevator.py  evidence_scorer.py  language_enforcer.py  models.py  pearl_criteria.py  schema.sql  tree_builder.py
chat/: __init__.py  db.py  migrate_from_epistememory.py
daemon_tasks/: __init__.py  auto_dev.py  binah.py  chokmah.py  daat.py  edge_validation.py  exploration.py  netzach.py  omer.py  orphan_validation.py  paper_draft.py  pivot_audit.py  tiferet.py  tzimtzum.py  yesod.py
dissensuengine/: __init__.py  cli.py  core.py  db.py  divergence.py  models.py  tikkun_scheduler.py
docs/: ARCHITECTURE_insights_flow.md  CODE_WITH_CLAUDE_2026.md  PORTABILITY.md  REFERENCES.md  advanced.md  architecture.md  getting_started.md  index.md  installation.md  roadmap.md
epistememory/: __init__.py  __main__.py  cli.py  core.py  db.py  embedding.py  models.py
etzchaim/: __init__.py  _paths.py  initiate.py
examples/: 01_quickstart.py  02_mazalengine_demo.py  02_probe_orchestrator_demo.py  03_corpus_exploration.py  README.md
explorationengine/: __init__.py  analogy_engine.py  cli.py  core.py  cross_domain.py  db.py  models.py  novelty_scorer.py  serendipity.py
failuretoinsight/: __init__.py  __main__.py  classifier.py  cli.py  core.py  db.py  models.py  nogah_miner.py  tmeot_detector.py
frontend-avatar/: FICHES.md  SPEC.md  STACK.md  personnages.json  prompts-images.md
frontend-systeme/: adversite.json  arbre.json  erreurs.json  mondes.json
gematria/: __init__.py  engine.py  hebrew_terms.py  schema.sql
grafana/: setup.sh
halom/: __init__.py  birur.py  gilgul.py  models.py  reshimu.py  structural.py  thompson.py
importer/: __init__.py  core.py
insightforge/: __init__.py  binah_gates.py  cli.py  core.py  cube_insights.py  db.py  emergence_detector.py  insight_validator.py  models.py  novelty_assessor.py  orchestrator.py  ratzo_v_shov.py  schema.sql
intentkeeper/: __init__.py  __main__.py  cli.py  core.py  db.py  kavanah_planner.py  models.py  schema.sql
kabbalah/: MALAKHIM.md  OLAMOT_ET_OMER.md  PARTZUFIM.md  QLIPHOTH.md  SENTIERS.md  SHEMOT_72_ET_PORTES_231.md  STRUCTURE_COMPLETE.md  clustering.py  concept_harvester.py  cube_of_space.py  cube_of_space.yaml  embed_gates.py  embed_initial.py  embed_sifrei.py  gates_462.py  governors.py  hebrew_enrichment.py  hybrid_embedding.py  hybrid_retrieval.py  omaqim.py  permutations.py  schema.sql  syzygies.py  three_books.py  tzeruf_db.py  tzeruf_spatial.py
malakhim/: __init__.py  __main__.py  even_shayish.py  facade.py  kavvanah_gate.py  malakh.py  metatron.py  models.py  reshimo.py  samael.py  schema.sql  tefillah.py
masakh/: __init__.py  arakhin.py  compression.py  context_assembler.py  context_monitor.py  gilgul.py  hitlabshut.py  kashiut.py  maturation.py  schema.sql  tzelem.py
mazalengine/: __init__.py  mazal_elyon.py  mazal_engine.py  mazal_tahton.py  rectification.py
memory/: ARCHITECTURE.md  DECISIONS.md  MISTAKES.md
migrations/: 004_i4_missing_indexes.sql  005_allow_incubating_status.sql
omer/: __init__.py  core.py  daily_influence.py  omer.yaml  tuner.py
partzufim/: __init__.py  abba.py  arikh_anpin.py  atik_yomin.py  base.py  db.py  imma.py  nukva.py  regulator.py  reshimu.py  schema.sql  zeir_anpin.py  zivvug.py  zivvug_schema.sql
portes/: __init__.py  analysis.py  sy_enrichment.py
scripts/: apply-oss-program.md  audit_daemon_idempotence.py  build_init_db.sh  check_doctrine_code_alignment.py  check_id_uniqueness.py  check_public_surface.sh  dump_sifrei_yesod.py  setup-symlinks.sh  (+5 more)
(+866 files in other folders)
