[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etzchaim"
version = "0.2.16"
description = "AI architecture grounded in Lurianic Kabbalistic discipline — 10 Sephirot, 4 Partzufim, 13 Tikkunei Dikna, 1696 doctrinal assertions. One-command install via Docker Compose."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Etz Chaim AI Contributors" },
]
keywords = [
    "ai", "kabbalah", "lurianic", "partzufim", "sephirot",
    "adversarial-testing", "llm-orchestration", "doctrinal-ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Flask>=3.1",
    "psycopg2-binary>=2.9",
    "pgvector>=0.4",
    "PyYAML>=6.0",
    # v0.2.2 : daemon loads sifrei_yesod.pipeline.validator which requires this
    "jsonschema>=4.0",
    # v0.2.0 CLI + providers
    "anthropic>=0.40",
    "typer>=0.12",
    "questionary>=2.0",
    "rich>=13",
    "structlog>=24",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
# Unified gateway over 100+ LLM providers (OpenAI, Google, xAI, Mistral,
# Cohere, DeepSeek, OpenRouter, Together, Groq, Fireworks, Perplexity,
# AWS Bedrock, Azure OpenAI, HuggingFace, NVIDIA NIM, Cloudflare, Replicate,
# vLLM, LM Studio, LocalAI, Ollama...). Opt-in.
litellm = [
    "litellm>=1.50.0",
]
# Everything — frontier + local + observability.
all = [
    "etzchaim[litellm,docs,dev]",
]

[project.urls]
Homepage = "https://github.com/yohanpoul/etz-chaim-ai"
Documentation = "https://yohanpoul.github.io/etz-chaim-ai/"
Repository = "https://github.com/yohanpoul/etz-chaim-ai"
Issues = "https://github.com/yohanpoul/etz-chaim-ai/issues"
Changelog = "https://github.com/yohanpoul/etz-chaim-ai/blob/main/CHANGELOG.md"

[project.scripts]
# v0.2.0 canonical (no hyphen, faster to type)
etzchaim = "etzchaim.cli.app:app"
# v0.1 legacy alias — removed in v0.3.0, redirects to canonical CLI
etz-chaim = "etzchaim.cli.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "bridge*", "mazalengine*", "partzufim*",
    "explorationengine*", "causalengine*", "insightforge*",
    "autojudge*", "epistememory*", "dissensuengine*",
    "failuretoinsight*", "omer*", "selfmap*",
    # v0.2.0 new packages
    "etzchaim*", "olamot*",
]
exclude = [
    "tests*", "sandbox*", "halom*", "audits*",
    "docs*", "examples*", ".garak-venv*",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.sql"]
# v0.2.0 : ship docker-compose + init-db + Dockerfile + i18n + demo_data
# inside the etzchaim wheel so `pip install` works without a git clone.
"etzchaim" = [
    "deploy/Dockerfile",
    "deploy/*.yml",
    "deploy/*.sh",
    "deploy/config.yaml",
    "deploy/claude-bridge/*.py",
    "deploy/init-db/*.sql",
    "i18n/*.yaml",
    "demo_data/*.sql",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = [
    "tests",
    "bridge/tests",
    "mazalengine/tests",
    "partzufim/tests",
    "sifrei_yesod/tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".venv", ".garak-venv", "build", "dist",
    "sandbox", "halom", "web/static",
    "sifrei_yesod/external",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "sandbox/", "halom/", ".venv/", ".garak-venv/",
]

[tool.coverage.run]
source = [
    "bridge", "mazalengine", "partzufim",
    "explorationengine", "causalengine", "insightforge",
]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
